--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <style>
   body {
     display: flex;
+    font-family: Sans-Serif;
     justify-content: center;
     align-items: center;
     height: 100vh;
